// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

11/28/2009
	r39 [Jobbie]
	* Added GN_REMODELING_CART cart weight bonus which is missed during implementation on r33.
	* Follow up implementation for GN_TRAINING_SWORD for its bonus hitrate. Follow up r33.
	* Switch packet_db to default and mmo.h to RagRE compatible so that RagexeRE client will be allowed.

11/26/2009
	r36 [LimitLine]
	* Updated Sorcerer cast times, cooldowns and aftercast delays according to http://forums.irowiki.org/showpost.php?p=559786&postcount=437 .
	* Next, I'll update their behaviors and other things I left out.

	r35 [LimitLine]
	* Fixed an error when compiling char-server in TXT mode.
	* Fixed hitrate bonus for Cart Remodeling, thanks to Spiritual_Kid.
	- http://www.eathena.ws/board/index.php?s=&showtopic=233391&view=findpost&p=1280383
	* Fixed Striking's weapon damage bonus, once again thanks to Spiritual_Kid.
	- http://www.eathena.ws/board/index.php?s=&showtopic=233391&view=findpost&p=1280383

	r34 [LimitLine]
	* Restored scripts_main.conf. Sorry =x

	r33 [LimitLine]
	* Added Sorcerer and Genetic Skills.
	- Fire Expansion Lv1-4 still being worked on.
	- A few skill formulas and damage increments based on base level are custom. Look inside battle.c to find out which.
	- Sling Item, Change Material, Special Pharmacy not included.
	- Cast times and cooldowns are also custom. I'll update those when I get official info about them.
	* Minor cleanup in skill_db.txt and skill_cast_db.txt
	- Made all skills not yet implemented passive and removed them from skill_cast_db.

	r32 [pakpil]
	* Added all Rune Knight skills rewrited.
	* Fixed WL_SMUMMON... skills that wasn't showing spheres correctly.
	* Fixed pc_setoption, pc_setriding and pc_isriding.
	- Removed #define pc_isriding and added a new function to check if a pc is riding bassed in its class. (test version).

11/15/2009
	r15 [LimitLine]