@@ -99,8 +99,14 @@
 2213,0x86,   ,  0,15,1000,enemy, 0x000	//WL_COMET
 2214,0x86,   ,  0, 5, 100,enemy, 0x080	//WL_CHAINLIGHTNING
 2216,0xcb,   , -1, 1:1:2:2:3,1000,enemy, 0x018	//WL_EARTHSTRAIN
-2238,0xd8,   ,  0, 1,1000,enemy, 0x006	//RA_ELECTRICSHOCKER
+2238,0xd8,   ,  0, 1,1000,enemy, 0x002	//RA_ELECTRICSHOCKER
 2239,0xd9,   ,  0, 1,1000,enemy, 0x006	//RA_CLUSTERBOMB
+2249,0xd2,   ,  0, 1,1000,enemy, 0x022	//RA_MAGENTATRAP
+2250,0xd3,   ,  0, 1,1000,enemy, 0x022	//RA_COBALTTRAP
+2251,0xd4,   ,  0, 1,1000,enemy, 0x022	//RA_MAIZETRAP
+2252,0xd5,   ,  0, 1,1000,enemy, 0x022	//RA_VERDURETRAP
+2253,0xd6,   ,  0, 1,1000,enemy, 0x002	//RA_FIRINGTRAP
+2254,0xd7,   ,  0, 1,1000,enemy, 0x002	//RA_ICEBOUNDTRAP
 2443,0xdf,   ,  0, 1,1000,enemy, 0x008	//SO_FIREWALK
 2444,0xdd,   ,  0, 1,1000,enemy, 0x008	//SO_ELECTRICWALK
 2446,0x86,   ,  0, 7:7:7:9:9,1000,enemy,0x000	//SO_EARTHGRAVE
